src/test/deca/syntax/valid/meth_missing_parents.deca
class A { 
    int meth(){ 
        return 1; 
    } 
}
{
    A a;
    a = new A();
    println(a.meth);
}
