src/test/deca/syntax/invalid/dot_incomplete.deca

class A { 
    int x; }
    
{
    A a;
    a = new A();
    println(a.);
}
